--- a/GenericStructure.Dal.Tests/GenericStructure.Dal.Tests.csproj
+++ b/GenericStructure.Dal.Tests/GenericStructure.Dal.Tests.csproj
@@ -79,8 +79,11 @@
     <Compile Include="Data\Database\Primitives\CategoriesSqlHelper.cs" />
     <Compile Include="Data\Mocked\VolatileDataset.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Testing\Database\DBaseArticlesTest.cs" />
-    <Compile Include="Testing\Mocked\Repositories\ArticleRepositoryTest.cs" />
+    <Compile Include="Testing\Manipulation\Repositories\DBaseArticleRepositoryTest.cs" />
+    <Compile Include="Testing\Manipulation\Repositories\MockArticleRepositoryTest.cs" />
+    <Compile Include="Testing\Manipulation\Repositories\RepositoryLocatorTest.cs" />
+    <Compile Include="Testing\Manipulation\Services\DBaseSalesServiceTest.cs" />
+    <Compile Include="Testing\Manipulation\Services\MockSalesServiceTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -90,6 +93,10 @@
     <ProjectReference Include="..\GenericStructure.Dal\GenericStructure.Dal.csproj">
       <Project>{d33f958c-36d0-4723-a6dd-ebb269a0f67a}</Project>
       <Name>GenericStructure.Dal</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\GenericStructure.Framework\GenericStructure.Framework.csproj">
+      <Project>{b1f478c6-c3eb-45fd-a7db-196c57010b73}</Project>
+      <Name>GenericStructure.Framework</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup />
