--- a/GenericStructure.Framework/GenericStructure.Framework.csproj
+++ b/GenericStructure.Framework/GenericStructure.Framework.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{A320C089-FCAE-4B02-A198-1C44BFA78323}</ProjectGuid>
+    <ProjectGuid>{B1F478C6-C3EB-45FD-A7DB-196C57010B73}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>GenericStructure.Business</RootNamespace>
-    <AssemblyName>GenericStructure.Business</AssemblyName>
+    <RootNamespace>GenericStructure.Framework</RootNamespace>
+    <AssemblyName>GenericStructure.Framework</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -39,7 +39,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Exceptions\BusinessErrorType.cs" />
+    <Compile Include="Exceptions\BaseException.cs" />
+    <Compile Include="Exceptions\ErrorType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
